--- a/option/baseline.yaml
+++ b/option/baseline.yaml
@@ -1,17 +1,17 @@
-model_name: baseline_plateau
+model_name: baseline_norm
 
-data_dir: /workspace2/SVHF_dataset
+data_dir: ../SVHF_dataset
 triplet_dir: ./triplets
 batch_size: 64
 num_workers: 32
 
-lr: 0.01
+lr: 0.001
 epoch: 20
 lr_decay_factor: 0.1
 patience: 1
 
 load_model: True
-load_path: ./saved/baseline/model_6.pt
+load_path: ./saved/baseline_plateau/model_1.pt
 
 val_every: 1
 save_every: 1
@@ -19,7 +19,7 @@ sample_for: 20
 val_sample_dir: ./val_sample
 save_dir: ./saved
 
-multi_gpu: False
+multi_gpu: True
 gpu_ids:
     - 0
     - 1
