--- a/option/baseline.yaml
+++ b/option/baseline.yaml
@@ -1,7 +1,7 @@
 model_name: baseline_norm
 
 data_dir: ../toy_dataset
-triplet_dir: ../toy_tripley
+triplet_dir: ../toy_triplet
 batch_size: 1
 num_workers: 0
 
