--- a/option/baseline.yaml
+++ b/option/baseline.yaml
@@ -1,20 +1,20 @@
 model_name: baseline_norm
 
-data_dir: ../toy_dataset
-triplet_dir: ../toy_triplet
+data_dir: ../SVHF_dataset
+triplet_dir: ./triplets
 batch_size: 1
-num_workers: 0
+num_workers: 32
 
 lr: 0.001
-epoch: 100
+epoch: 20
 lr_decay_factor: 0.1
 patience: 1
 
 load_model: False
 load_path: ./saved/baseline_plateau/model_1.pt
 
-val_every: 10000
-save_every: 100000
+val_every: 1
+save_every: 1
 sample_for: 20
 val_sample_dir: ./val_sample
 save_dir: ./saved
