--- a/option/baseline.yaml
+++ b/option/baseline.yaml
@@ -1,11 +1,11 @@
-model_name: baseline_norm
+model_name: baseline
 
 data_dir: ../SVHF_dataset
 triplet_dir: ./triplets
 batch_size: 64
-num_workers: 32
+num_workers: 16
 
-lr: 0.001
+lr: 0.01
 epoch: 30
 lr_decay_factor: 0.1
 patience: 1
@@ -19,7 +19,7 @@ sample_for: 20
 val_sample_dir: ./val_sample
 save_dir: ./saved
 
-multi_gpu: True
+multi_gpu: False
 gpu_ids:
     - 0
     - 1
