--- a/option/baseline_deeper.yaml
+++ b/option/baseline_deeper.yaml
@@ -1,5 +1,5 @@
-model_name: baseline
-model: model
+model_name: baseline_deeper
+model: model2
 
 data_dir: ../SVHF_dataset
 triplet_dir: ./triplets
@@ -20,7 +20,7 @@ sample_for: 20
 val_sample_dir: ./val_sample
 save_dir: ./saved
 
-multi_gpu: False
+multi_gpu: True
 gpu_ids:
     - 0
     - 1
