--- a/option/baseline_model2.yaml
+++ b/option/baseline_model2.yaml
@@ -1,9 +1,9 @@
-model_name: baseline_deeper
+model_name: baseline_model2
 model: model2
 
 data_dir: ../SVHF_dataset
 triplet_dir: ./triplets
-batch_size: 32
+batch_size: 64
 num_workers: 16
 
 lr: 0.01
@@ -20,7 +20,7 @@ sample_for: 20
 val_sample_dir: ./val_sample
 save_dir: ./saved
 
-multi_gpu: True
+multi_gpu: False
 gpu_ids:
     - 0
     - 1
