--- a/option/test.yaml
+++ b/option/test.yaml
@@ -12,7 +12,7 @@ lr_decay_factor: 0.1
 patience: 1
 
 load_model: test
-load_path: ./saved/baseline/model_6.pt
+load_path: ./saved/baseline/model_10.pt
 
 val_every: 1
 save_every: 1
