--- a/option/baseline.yaml
+++ b/option/baseline.yaml
@@ -1,4 +1,4 @@
-model_name: baseline_relu7
+model_name: baseline_relu7_sgd
 model: model
 
 data_dir: ../SVHF_dataset
@@ -11,6 +11,7 @@ epoch: 30
 lr_decay_factor: 0.1
 patience: 1
 weight_init: default
+optim: sgd
 
 load_model: False
 load_path: ./saved/baseline_plateau/model_1.pt
