--- a/option/model3.yaml
+++ b/option/model3.yaml
@@ -1,4 +1,4 @@
-model_name: model3_xavier_sgd
+model_name: model3_xavier_adam
 model: model3
 
 data_dir: ../SVHF_dataset
@@ -11,7 +11,7 @@ epoch: 30
 lr_decay_factor: 0.1
 patience: 1
 weight_init: xavier_uniform
-optim: sgd
+optim: adam
 
 load_model: False
 load_path: ./saved/baseline_plateau/model_1.pt
